# sc3ntist

./: .gitignore  .gitmodules  CMakeLists.txt
src/debugger/: connection.cpp  connection.h  debugger.cpp  debugger.h  debugprotocol.proto  debugprotocol_debugger.cpp  debugprotocol_debugger.h
src/gui/: debugger.cpp  debugger.h  debuggerconnectiondialog.cpp  debuggerconnectiondialog.h  debugprotocol.h  debugprotocol_debugger.cpp  debugprotocol_debugger.h  disassemblyitemdelegate.cpp  disassemblymodel.cpp  disassemblymodel.h  disassemblyview.cpp  disassemblyview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.cpp  project.h
src/parser/: SupportedGame.cpp  SupportedGame.h
